[project]
name = "simple-code-execution-engine-api"
version = "0.1.0"
description = "API to execute code in a sandboxed environment. Supports Java, Python, C++, and JavaScript."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
